--- a/Rental/Rental.WEB/Web.config
+++ b/Rental/Rental.WEB/Web.config
@@ -17,6 +17,7 @@
   <connectionStrings>
     <add name="IdentityContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='|DataDirectory|\IdentityContext.mdf';Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
     <add name="RentContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='|DataDirectory|\RentContext.mdf';Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <add name="LogContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='|DataDirectory|\LogContext.mdf';Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
